# gridscope

./: .gitignore  README.md  notes.txt  pyproject.toml
gridscope/data_fetching/: __init__.py  entsoe_fetcher.py  neso_demand_fetcher.py  open_meteo_fetcher.py  open_meteo_fetcher_uk.py  uk_gas_imports_fetcher.py  uk_gas_prices_preprocessor.py  uk_open_meteo_fetcher.py
gridscope/data_preprocessing/: __init__.py  data_merger_30_min.py  data_merger_daily.py
research/data_analysis/: raw_weather_analysis.ipynb
