[project]
name = "gridscope"
version = "0.1.0"
description = ""
authors = [
    {name = "Lars del Bubba",email = "larsdb98@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "entsoe-py (>=0.7.8,<0.8.0)",
    "entsog-py (>=1.0.3,<2.0.0)",
    "quandl (>=3.7.0,<4.0.0)",
    "investpy (>=1.0.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
